        ***************************************************************
        *                                                             *
        *  Changes and Developments in the ShinyItemAnalysis Package  *
        *                                                             *
        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-15. (2019-06-20) -
-------------------------------------------------------

BUG FIXING
  o DIF summary table bug was fixed. Table is disaplayed when
    some DIF methods cannot be fitted.
  o DDF parameter tables were fixed for data BOV and Czech Trivia.
  o With difNLR package version 1.2.3 plots for DDF are displayed
    even for binary data. Plots were also fixed for data Bov.
  o PDF Reports now work locally and on shinyapps.io.

MINOR UPDATES
  o Authors' and contributors' details were updated.
  o Function plotMultinomial() was updated to return smooth curves
    for any matching criterion.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.3.0-14. (2019-06-19) -
-------------------------------------------------------

BUG FIXING
  o Bug in Bock's nominal IRT model was fixed. ICCs are now properly
    displayed for all binary data. Error for non-displayable
    table of parameters was further improved. Tables for items are
    displayed even in case that table for all items is not.
  o DIF items are now correctly written in reports.
  o Corrplot now properly replaces item names when Keep item names
    is not selected in Data upload section.
  o In DIF/Fairness section, histograms of Total scores for groups
    are now properly displayed also for ordinal items.

MAJOR UPDATES
  o Legends for multinomial and distractor plots were improved.

MINOR UPDATES
  o Authors' and contributors' details were updated.

-------------------------------------------------------