@@ -1,4 +1,4 @@
-        ***************************************************************
+﻿        ***************************************************************
         *                                                             *
         *  Changes and Developments in the ShinyItemAnalysis Package  *
         *                                                             *
@@ -15,6 +15,8 @@ BUG FIXING
   o With difNLR package version 1.2.3 plots for DDF are displayed
     even for binary data. Plots were also fixed for data Bov.
   o PDF Reports now work locally and on shinyapps.io.
+  o Dendrogram now properly replaces item names when Keep item names
+    is not selected in Data upload section.
 
 MINOR UPDATES
   o Authors' and contributors' details were updated.
